[package]
name = "urouter-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
urouter-common = { path = "../urouter-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "urouter"
path = "src/main.rs"
